--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <footer>
         <div class="container">
-            <p></p>
+            <p>&copy; 2024 Anurag Motor Driving School. All rights reserved.</p>
         </div>
     </footer>
 
