--- a/index.html
+++ b/index.html
@@ -102,10 +102,16 @@
             </form>
         </div>
     </section>
+
     <footer>
-        <p>&copy; 2024 Anurag Motor Driving School. All rights reserved.</p>
+        <div class="container">
+            <p></p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
+  <footer>
+        <p>&copy; 2024 Anurag Motor Driving School. All rights reserved.</p>
+    </footer>
 </body>
 </html>
