--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@
               
             </form>
         </div>
-<img src="https://i.postimg.cc/dQNsCNZ7/Visiting-card.jpg" alt="Visiting_card">
+<img src="https://i.postimg.cc/dQNsCNZ7/Visiting-card.jpg" alt="Visiting_card"class="visiting-card">>
     </section>
-
     <footer>
         <div class="container">
             <p></p>
