--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               
             </form>
         </div>
-<img src="https://i.postimg.cc/dQNsCNZ7/Visiting-card.jpg" alt="Visiting_card"class="visiting-card">>
+<img src="https://i.postimg.cc/dQNsCNZ7/Visiting-card.jpg" alt="Visiting_card"class="visiting-card">
     </section>
     <footer>
         <div class="container">
